--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -34,9 +34,11 @@
                     android:textSize="20sp" />
             </LinearLayout>
             <ImageView
-                android:layout_width="match_parent"
+                android:layout_width="200dp"
                 android:layout_height="1000dp"
-                android:src="@drawable/loadingpicture" />
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/logo" />
 
 
         </RelativeLayout>
