--- a/app/src/main/res/layout/description.xml
+++ b/app/src/main/res/layout/description.xml
@@ -1,26 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
+        android:gravity="center"
         android:text="설명"
-        android:textSize="50dp"
-        android:gravity="center"/>
+        android:fontFamily="@font/inter_bold"
+        android:textColor="@color/black"
+        android:textSize="18dp" />
+
     <LinearLayout
         android:id="@+id/linearLayout6"
         android:layout_width="match_parent"
         android:layout_height="3dp">
 
         <LinearLayout
-            android:background="@color/black"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:background="@color/black" />
     </LinearLayout>
 
     <ScrollView
@@ -35,10 +37,10 @@
     </ScrollView>
 
     <Button
-        android:layout_margin="20dp"
         android:id="@+id/okbtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:text="이해했습니다."/>
+        android:layout_margin="20dp"
+        android:text="이해했습니다."
+        android:textSize="20sp" />
 </LinearLayout>
