--- a/app/src/main/res/layout/fragment_board_edit.xml
+++ b/app/src/main/res/layout/fragment_board_edit.xml
@@ -43,19 +43,33 @@
                         android:minHeight="200dp" />
                 </LinearLayout>
             </ScrollView>
-            <Button
-                android:id="@+id/editBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="수정하기" />
-            <Button
-                android:id="@+id/ImageBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="사진 추가" />
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center">
+
+                <Button
+                    android:id="@+id/ImageBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.7"
+                    android:text="사진 추가" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="4" />
+
+                <Button
+                    android:id="@+id/editBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:layout_weight="0.7"
+                    android:backgroundTint="@color/food_color"
+                    android:text="수정하기" />
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 
