--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -7,27 +7,46 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <TextView
+            android:id="@+id/calendarTitle"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:fontFamily="@font/inter_bold"
+            android:gravity="center"
+            android:text="게시판"
+            android:textSize="18sp"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <LinearLayout
+            android:id="@+id/line"
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:layout_weight="1"
+            android:background="@color/black"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@id/calendarTitle" />
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="16dp">
+            android:padding="16dp"
+            app:layout_constraintTop_toBottomOf="@id/line">
 
             <ListView
                 android:id="@+id/listview"
                 android:layout_width="match_parent"
-                android:layout_height="600dp">
-            </ListView>
+                android:layout_height="500dp"></ListView>
 
             <Button
                 android:id="@+id/writeBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="120dp"
+                android:layout_height="50dp"
                 android:layout_gravity="right"
-                android:text="Write Post" />
+                android:text="글 작성" />
         </LinearLayout>
-        <!--하단 검정 박스 -->
 
+        <!--하단 검정 박스 -->
         <LinearLayout
             android:id="@+id/linearLayout6"
             android:layout_width="match_parent"
