--- a/app/src/main/res/layout/fragment_contentclick.xml
+++ b/app/src/main/res/layout/fragment_contentclick.xml
@@ -1,66 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".fragments.`ContentC]lickFragment`"
-        android:orientation="vertical">
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+        android:orientation="vertical"
+        tools:context=".fragments.`ContentC]lickFragment`">
 
-    <TextView
-        android:id="@+id/contenttitle"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:gravity="center"
-        android:text="title"
-        android:textSize="30dp"
-        app:layout_constraintTop_toTopOf="parent" />
-    <Button
-        android:visibility="invisible"
-        android:id="@+id/contentset"
-        android:layout_width="70dp"
-        android:layout_height="30dp"
-        android:text="모양 수정"
-        android:layout_marginTop="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/contenttitle"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:fontFamily="@font/inter_bold"
+                android:gravity="center"
+                android:text="title"
+                android:textSize="30dp"
+                android:textColor="@color/black"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/contentset"
+                android:layout_width="70dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="10dp"
+                android:text="모양 수정"
+                android:visibility="invisible"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
         <TextView
             android:id="@+id/contenttime"
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:text="time"
-            android:gravity="right"/>
+            android:layout_gravity="center_vertical"
+            android:fontFamily="@font/inter_light"
+            android:gravity="right"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="5dp"
+            android:text="time" />
+
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:background="@color/black"/>
+            android:background="@color/black" />
+
         <ScrollView
-            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
-            android:layout_height="300dp">
+            android:layout_height="500dp"
+            android:layout_marginTop="10dp">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
-        <TextView
-            android:id="@+id/contentcontent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="20dp"
-            android:text="@string/hello_blank_fragment" />
+
+                <TextView
+                    android:id="@+id/contentcontent"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginRight="20dp"
+                    android:fontFamily="@font/inter_medium"
+                    android:text="@string/hello_blank_fragment" />
+
                 <ImageView
                     android:id="@+id/getImage"
-                    android:layout_margin="30dp"
                     android:layout_width="match_parent"
-                    android:layout_height="300dp"/>
+                    android:layout_height="300dp"
+                    android:layout_margin="30dp" />
 
             </LinearLayout>
         </ScrollView>
