--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -48,7 +48,7 @@
                 <LinearLayout
                     android:id="@+id/statusBox"
                     android:layout_width="300dp"
-                    android:layout_height="150dp"
+                    android:layout_height="120dp"
                     android:layout_marginTop="20dp"
                     android:orientation="horizontal"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -58,13 +58,13 @@
                     <LinearLayout
                         android:id="@+id/statusView"
                         android:layout_width="200dp"
-                        android:layout_height="wrap_content"
+                        android:layout_height="120dp"
                         android:orientation="vertical">
 
                         <LinearLayout
-                            android:layout_width="wrap_content"
+                            android:layout_width="200dp"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="25dp"
+                            android:layout_marginTop="15dp"
                             android:orientation="horizontal">
 
                             <TextView
@@ -79,17 +79,27 @@
                                 android:id="@+id/metabolismKcal"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginLeft="50dp"
+                                android:layout_marginLeft="10dp"
                                 android:fontFamily="@font/inter_bold"
-                                android:text="0 Kcal"
+                                android:text="0000"
+                                android:layout_weight="1"
+                                android:gravity="end"
+                                android:layout_marginRight="5dp"
+                                android:textColor="@color/black" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/inter_bold"
+                                android:text="Kcal"
                                 android:textColor="@color/black" />
                         </LinearLayout>
 
 
                         <LinearLayout
-                            android:layout_width="wrap_content"
+                            android:layout_width="200dp"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="25dp"
+                            android:layout_marginTop="15dp"
                             android:orientation="horizontal">
 
                             <TextView
@@ -105,9 +115,19 @@
                                 android:id="@+id/eatKcal"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginLeft="50dp"
+                                android:layout_marginLeft="10dp"
                                 android:fontFamily="@font/inter_bold"
-                                android:text="0 Kcal"
+                                android:text="0000"
+                                android:layout_weight="1"
+                                android:gravity="end"
+                                android:layout_marginRight="5dp"
+                                android:textColor="@color/black" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/inter_bold"
+                                android:text="Kcal"
                                 android:textColor="@color/black" />
                         </LinearLayout>
 
@@ -116,41 +136,31 @@
                     <LinearLayout
                         android:id="@+id/totalView"
                         android:layout_width="100dp"
-                        android:layout_height="150dp"
+                        android:layout_height="120dp"
                         android:orientation="vertical">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:layout_marginTop="25dp"
+                            android:layout_marginTop="10dp"
                             android:fontFamily="@font/inter_light"
-                            android:text="예상 감량 몸무게"
+                            android:text="몸무게 변화 에측"
                             android:textAlignment="center"
                             android:textColor="@color/black"
                             android:textSize="10dp" />
 
                         <TextView
-                            android:id="@+id/TodayWeight"
+                            android:id="@+id/weightChange"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:layout_marginTop="20dp"
-                            android:fontFamily="@font/inter_bold"
-                            android:text="0.0Kg"
-                            android:textColor="@color/black"
-                            android:textSize="24dp" />
-
-                        <TextView
-                            android:id="@+id/WeightChange"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginTop="0dp"
+                            android:layout_marginTop="12dp"
+                            android:layout_weight="1"
                             android:fontFamily="@font/inter_medium"
-                            android:text="( 0.0kg )"
+                            android:text="0.0kg"
                             android:textColor="@color/black"
-                            android:textSize="12dp" />
+                            android:textSize="15dp" />
                     </LinearLayout>
                 </LinearLayout>
 
@@ -192,7 +202,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        tools:ignore="SpeakableTextPresentCheck">
+                        tools:ignore="SpeakableTextPresentCheck"
+                        android:textSize="13dp">
 
                         <LinearLayout
                             android:id="@+id/listView"
@@ -207,30 +218,40 @@
                     <LinearLayout
                         android:layout_width="150dp"
                         android:layout_height="100dp"
-                        android:layout_marginLeft="10dp"
                         android:orientation="vertical">
 
                         <TextView
                             android:id="@+id/right_text"
-                            android:layout_width="150dp"
-                            android:layout_height="100dp" />
+                            android:layout_width="145dp"
+                            android:layout_height="97dp"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginTop="3dp"
+                            android:layout_marginBottom="3dp"
+                            android:fontFamily="@font/inter_light"
+                            android:textColor="@color/black"
+                            android:textSize="13dp"/>
                     </LinearLayout>
                 </LinearLayout>
 
-                <Button
-                    android:id="@+id/foodButton"
+                <LinearLayout
+                    android:id="@+id/foodButtonLinearLayout"
                     android:layout_width="300dp"
                     android:layout_height="30dp"
-                    android:background="@drawable/round_button"
-                    android:elevation="4dp"
-                    android:gravity="center"
-                    android:text="+"
-                    android:textColor="@android:color/white"
-                    android:textSize="30dp"
+                    app:layout_constraintTop_toBottomOf="@id/todayFoodView"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/todayFoodView"/>
+                    app:layout_constraintEnd_toEndOf="parent">
 
+                    <Button
+                        android:id="@+id/foodButton"
+                        android:layout_width="300dp"
+                        android:layout_height="30dp"
+                        android:elevation="4dp"
+                        android:text="추가하기"
+                        android:background="@drawable/button"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/todayFoodView"/>
+                </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/workoutLinearLayout"
@@ -239,12 +260,10 @@
                     android:background="@drawable/box_upper_radius"
                     android:backgroundTint="@color/workout_color"
                     android:orientation="horizontal"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginTop="30dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.504"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.637">
+                    app:layout_constraintTop_toBottomOf="@id/foodButtonLinearLayout">
 
                     <TextView
                         android:id="@+id/todayWorkout"
@@ -263,12 +282,11 @@
                     android:id="@+id/todayWorkoutView"
                     android:layout_width="300dp"
                     android:layout_height="150dp"
-                    android:layout_marginBottom="104dp"
                     android:background="@drawable/outline"
                     android:orientation="vertical"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent">
+                    app:layout_constraintTop_toBottomOf="@id/workoutLinearLayout">
 
                     <ScrollView
                         android:id="@+id/scrollView2"
@@ -281,23 +299,23 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="vertical"
-                            app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            app:layout_constraintStart_toStartOf="parent"/>
                     </ScrollView>
 
-                    <Button
-                        android:id="@+id/workoutButton"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:layout_marginLeft="250dp"
-                        android:background="@drawable/round_button"
-                        android:elevation="4dp"
-                        android:gravity="center"
-                        android:text="+"
-                        android:textColor="@android:color/white"
-                        android:textSize="30dp" />
+                    <LinearLayout
+                        android:layout_width="300dp"
+                        android:layout_height="30dp">
+                        <Button
+                            android:id="@+id/workoutButton"
+                            android:layout_width="300dp"
+                            android:layout_height="30dp"
+                            android:background="@drawable/button"
+                            android:elevation="4dp"
+                            android:gravity="center"
+                            android:text="추가하기"
+                            android:textColor="@android:color/black"/>
+                    </LinearLayout>
 
                 </LinearLayout>
 
