--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,61 +7,90 @@
     android:padding="16dp"
     tools:context=".fragments.SearchFragment">
 
-    <!-- 검색 입력 필드 -->
-    <EditText
-        android:id="@+id/search_input"
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="48dp"
-        android:padding="12dp"
-        android:imeOptions="actionSearch"
-        android:hint="@string/search_hint"
-        android:inputType="text"/>
+        android:layout_height="70dp"
+        android:fontFamily="@font/inter_bold"
+        android:gravity="center"
+        android:text="음식 추가"
+        android:textSize="18sp" />
+
+    <LinearLayout
+        android:id="@+id/line"
+        android:layout_width="1000dp"
+        android:layout_height="1dp"
+        android:layout_gravity="center"
+        android:background="@color/black"
+        android:orientation="horizontal"
+        android:layout_marginBottom="20dp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp">
+
+        <EditText
+            android:layout_marginHorizontal="10dp"
+            android:id="@+id/search_input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/search_hint_food"
+            android:imeOptions="actionSearch"
+            android:inputType="text"
+            android:minHeight="48dp"
+            android:padding="12dp"
+            android:background="@drawable/round_box"
+            android:backgroundTint="@color/food_color"
+            />
+    </LinearLayout>
+    <!-- 검색 입력 필드 -->
 
     <!-- 검색 결과를 표시할 TextView -->
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1">
+
         <LinearLayout
+            android:id="@+id/result_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-    <TextView
-        android:id="@+id/result_text1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="16dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textSize="16sp" />  <!-- 텍스트 크기 설정 -->
-        <TextView
-            android:id="@+id/result_text2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textSize="16sp" />  <!-- 텍스트 크기 설정 -->
-        <TextView
-            android:id="@+id/result_text3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textSize="16sp" />  <!-- 텍스트 크기 설정 -->
-        <TextView
-            android:id="@+id/result_text4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textSize="16sp" />  <!-- 텍스트 크기 설정 -->
-        <TextView
-            android:id="@+id/result_text5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textSize="16sp" />  <!-- 텍스트 크기 설정 -->
+
+            <TextView
+                android:id="@+id/result_text1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textSize="16sp" />  <!-- 텍스트 크기 설정 -->
+            <TextView
+                android:id="@+id/result_text2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textSize="16sp" />  <!-- 텍스트 크기 설정 -->
+            <TextView
+                android:id="@+id/result_text3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textSize="16sp" />  <!-- 텍스트 크기 설정 -->
+            <TextView
+                android:id="@+id/result_text4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textSize="16sp" />  <!-- 텍스트 크기 설정 -->
+            <TextView
+                android:id="@+id/result_text5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textSize="16sp" />  <!-- 텍스트 크기 설정 -->
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
