--- a/app/src/main/res/layout/fragment_workout.xml
+++ b/app/src/main/res/layout/fragment_workout.xml
@@ -1,44 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".fragments.WorkoutFragment"
-        android:orientation="vertical">
-
+        android:orientation="vertical"
+        tools:context=".fragments.WorkoutFragment">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        <EditText
-            android:id="@+id/workname"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="운동을 적어주세요"
-            android:layout_marginTop="100dp"
-            android:layout_marginLeft="10dp"/>
-        <EditText
-            android:id="@+id/weight"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="무게"
-            android:layout_marginTop="100dp"
-            android:layout_marginLeft="10dp"/>
-            <EditText
-                android:id="@+id/workrepeat"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="반복횟수"
-                android:layout_marginTop="100dp"
-                android:layout_marginLeft="10dp"/>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
-            android:layout_marginLeft="20dp"
-            android:id="@+id/plusBtn"
-            android:hint="+"/>
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:fontFamily="@font/inter_bold"
+                android:gravity="center"
+                android:text="운동 추가"
+                android:textSize="18sp" />
+
+            <LinearLayout
+                android:id="@+id/line"
+                android:layout_width="match_parent"
+                android:layout_height="3dp"
+                android:layout_weight="1"
+                android:background="@color/black"
+                android:orientation="horizontal" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <EditText
+                        android:id="@+id/workname"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="100dp"
+                        android:hint="운동을 적어주세요" />
+
+                    <EditText
+                        android:id="@+id/weight"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="100dp"
+                        android:hint="무게" />
+
+                    <EditText
+                        android:id="@+id/workrepeat"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="100dp"
+                        android:hint="반복횟수" />
+
+                    <Button
+                        android:id="@+id/plusBtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="100dp"
+                        android:backgroundTint="@color/workout_color"
+                        android:hint="추가"
+                        android:textColorHint="@color/white" />
+
+                </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
@@ -46,22 +76,24 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
             <TextView
-                android:hint="현재 진행중인 운동"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:gravity="center"
-                android:textSize="30sp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:hint="현재 진행중인 운동"
+                android:textSize="30sp" />
+
             <ScrollView
-                android:layout_margin="40dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_margin="40dp">
 
                 <LinearLayout
                     android:id="@+id/workview"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"/>
+                    android:orientation="vertical" />
 
             </ScrollView>
         </LinearLayout>
