--- a/app/src/main/res/layout/userinfodialog.xml
+++ b/app/src/main/res/layout/userinfodialog.xml
@@ -1,71 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <TextView
+    
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="20dp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:background="@color/black" />
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="50sp"
-        android:text="키, 몸무게"/>
-<LinearLayout
-    android:layout_marginTop="20dp"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
-    <RadioGroup
-        android:id="@+id/radioGroup"
-        android:orientation="vertical"
-        android:layout_marginLeft="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_marginTop="20dp"
+        android:orientation="vertical">
 
-        <RadioButton
-            android:layout_weight="1"
-            android:text="남자"
-            android:id="@+id/rg_btn1"
-            android:layout_width="175dp"
-            android:layout_height="wrap_content" />
+        <RadioGroup
+            android:id="@+id/radioGroup"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:orientation="horizontal">
 
-        <RadioButton
-            android:layout_weight="1"
-            android:text="여자"
-            android:id="@+id/rg_btn2"
-            android:layout_width="175dp"
-            android:layout_height="wrap_content" />
+            <RadioButton
+                android:id="@+id/rg_btn1"
+                android:layout_width="165dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="남자" />
 
-    </RadioGroup>
-    <EditText
-        android:layout_margin="20dp"
-        android:hint="키"
-        android:id="@+id/height"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-    <EditText
-        android:layout_margin="20dp"
-        android:hint="몸무게"
-        android:id="@+id/weight"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-    <EditText
-        android:layout_margin="20dp"
-        android:hint="나이"
-        android:id="@+id/age"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-    <Button
-        android:layout_margin="20dp"
-        android:id="@+id/okbutton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="등록"/>
-    <Button
-        android:layout_margin="20dp"
-        android:id="@+id/cancelbutton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="취소"/>
-</LinearLayout>
+            <RadioButton
+                android:id="@+id/rg_btn2"
+                android:layout_width="165dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="여자" />
+
+        </RadioGroup>
+
+        <EditText
+            android:id="@+id/height"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="10dp"
+            android:layout_marginHorizontal="20dp"
+            android:hint="키" />
+
+        <EditText
+            android:id="@+id/weight"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="10dp"
+            android:layout_marginHorizontal="20dp"
+            android:hint="몸무게" />
+
+        <EditText
+            android:id="@+id/age"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="10dp"
+            android:layout_marginHorizontal="20dp"
+            android:hint="나이" />
+
+        <Button
+            android:id="@+id/okbutton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginBottom="10dp"
+            android:backgroundTint="@color/food_color"
+            android:hint="저장" />
+
+        <Button
+            android:id="@+id/cancelbutton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginBottom="10dp"
+            android:hint="취소" />
+    </LinearLayout>
 </LinearLayout>
