--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="workout_color">#FF1E00</color>
     <color name="food_color">#59CE8F</color>
     <color name="sub_color">#E8F9FD</color>
-    <color name="gray">#D3D3D3</color>
+    <color name="gray">#A5A5A5</color>
+    <color name="lightgray">#C8C8C8</color>
 </resources>
